chore: declare style rule that prevent double borders on buttons

--- a/button-group/styles.css
+++ b/button-group/styles.css
@@ -16,3 +16,7 @@ body {
   content: '';
   display: table;
 }
+
+.button-group button:not(:last-child) {
+  border-right: none;
+}
